Fix image popup so that it stretches to fill the entire renderer

--- a/renderer/styles/style.css
+++ b/renderer/styles/style.css
@@ -878,3 +878,11 @@ span.qc-option-txt{
   background-color: #65A0E6;
   height: 75%;
 }
+
+.image-model-popup{
+  position:fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
